k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: eco-nojin
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
      appProtocol: http
  selector:
    app: frontend
  sessionAffinity: None
